--- a/client/main.scss
+++ b/client/main.scss
@@ -51,6 +51,13 @@ ul {
     list-style: none;
 }
 
+.btn {
+    width: 150px;
+    font-size: 16px;
+    height: 30px;
+    background-color: $btnBg;
+    color: white;
+}
 /*------------------------------------------------------------
 Navbar
 -------------------------------------------------------------*/
@@ -171,7 +178,7 @@ Signup page
     border-radius: 50px;
     background-color: rgba(255, 255, 255, .9);
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
 }
@@ -232,7 +239,7 @@ Login page
     border-radius: 50px;
     background-color: rgba(255, 255, 255, .9);
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
 }
@@ -279,13 +286,6 @@ Login page
 //--------------------------------------------------------------
 //Mobile View
 @media (max-width: 420px) {
-    .btn {
-        width: 150px;
-        font-size: 16px;
-        height: 30px;
-        background-color: $btnBg;
-        color: white;
-    }
     /*------------------------------------------------------------
     Navbar
     -------------------------------------------------------------*/
@@ -652,9 +652,6 @@ Login page
     /*------------------------------------------------------------
     Navbar
     -------------------------------------------------------------*/
-    //Nav right
-    .dropdown-icon {
-    }
     /*------------------------------------------------------------
     Dashboard
     -------------------------------------------------------------*/
@@ -672,6 +669,8 @@ Login page
         display: flex;
         width: 95%;
         height: 90%;
+        padding: 20px;
+        border: 1px solid $greyBorder;
     }
     .dash-container .dash-section:first-child {
         flex-grow: 1;
@@ -680,11 +679,15 @@ Login page
         display: flex;
         flex-direction: column;
         flex-grow: 3;
-        border: 1px solid red;
+        border-right: 1px solid $greyBorder;
         padding: 30px;
     }
-    .dash-section>div {
+    .dash-section:last-child {
+        border: none;
+    }
+    .dash-section .item-overflow {
         flex-grow: 1;
+        overflow: auto;
     }
     .dash-section h2 {
         text-align: center;
@@ -699,5 +702,20 @@ Login page
         background-color: $info;
         margin: 15px 0;
         padding: 5px 20px;
+    }
+    .dash-section:nth-child(2) div:last-child {
+        display: flex;
+        justify-content: space-between;
+    }
+    .dash-section:last-child li{
+        border: 1px solid $greyBorder;
+        padding: 20px;
+    }
+    .dash-section:last-child li h6{
+        margin: 5px;
+    }
+    .dash-section:last-child li div:last-child {
+        display: flex;
+        justify-content: space-between;
     }
 }
