--- a/public/main.css
+++ b/public/main.css
@@ -30,6 +30,13 @@ a:hover {
 ul {
   list-style: none; }
 
+.btn {
+  width: 150px;
+  font-size: 16px;
+  height: 30px;
+  background-color: #42f4d4;
+  color: white; }
+
 /*------------------------------------------------------------
 Navbar
 -------------------------------------------------------------*/
@@ -150,7 +157,7 @@ Signup page
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.9);
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   display: flex;
   flex-direction: column; }
 
@@ -211,7 +218,7 @@ Login page
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.9);
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   display: flex;
   flex-direction: column; }
 
@@ -256,12 +263,6 @@ Login page
   align-self: center; }
 
 @media (max-width: 420px) {
-  .btn {
-    width: 150px;
-    font-size: 16px;
-    height: 30px;
-    background-color: #42f4d4;
-    color: white; }
   /*------------------------------------------------------------
     Navbar
     -------------------------------------------------------------*/
@@ -559,17 +560,22 @@ Login page
   .dash-container {
     display: flex;
     width: 95%;
-    height: 90%; }
+    height: 90%;
+    padding: 20px;
+    border: 1px solid #95989A; }
   .dash-container .dash-section:first-child {
     flex-grow: 1; }
   .dash-section {
     display: flex;
     flex-direction: column;
     flex-grow: 3;
-    border: 1px solid red;
+    border-right: 1px solid #95989A;
     padding: 30px; }
-  .dash-section > div {
-    flex-grow: 1; }
+  .dash-section:last-child {
+    border: none; }
+  .dash-section .item-overflow {
+    flex-grow: 1;
+    overflow: auto; }
   .dash-section h2 {
     text-align: center;
     margin-bottom: 20px; }
@@ -580,4 +586,15 @@ Login page
     color: white;
     background-color: #06D4FF;
     margin: 15px 0;
-    padding: 5px 20px; } }
+    padding: 5px 20px; }
+  .dash-section:nth-child(2) div:last-child {
+    display: flex;
+    justify-content: space-between; }
+  .dash-section:last-child li {
+    border: 1px solid #95989A;
+    padding: 20px; }
+  .dash-section:last-child li h6 {
+    margin: 5px; }
+  .dash-section:last-child li div:last-child {
+    display: flex;
+    justify-content: space-between; } }
