--- a/client/main.scss
+++ b/client/main.scss
@@ -582,6 +582,9 @@ Login page
     /*------------------------------------------------------------
     Group
     -------------------------------------------------------------*/
+    #group-add-collection {
+        display: none !important;
+    }
     .group {
         display: none;
     }
@@ -902,6 +905,50 @@ Login page
     /*------------------------------------------------------------
     Group
     -------------------------------------------------------------*/
+    #group-add-collection {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -250px;
+        margin-left: -200px;
+        width: 400px;
+        height: 500px;
+        background-color: white;
+        border: 1px solid $greyBorder;
+        padding: 30px;
+        z-index: 2;
+    }
+    #group-add-collection ul {
+        overflow: auto;
+        height: 85%;
+        margin-bottom: 20px;
+    }
+    #group-add-collection li {
+        display: flex;
+        justify-content: space-between;
+        word-break: break-all;
+        margin: 15px 0;
+    }
+    #group-add-collection li button{
+        background-color: $success;
+        padding: 5px 10px;
+        color: white;
+        height: 30px;
+        align-self: center;
+    }
+    #group-add-collection div {
+        display: flex;
+        justify-content: space-between;
+        flex-grow: 1;
+        padding-right: 15px;
+        max-width: 70%;
+    }
+    #group-add-collection>button {
+        color: white;
+        background-color: $cancel;
+        font-size: 16px;
+        padding: 7px 20px;
+    }
     .m-group {
         display: none;
     }
@@ -920,12 +967,34 @@ Login page
         display: flex;
         flex-direction: column;
     }
+    .group-container div div:first-child {
+        margin: 5px 0;
+    }
     .group-container div:last-child {
         display: flex;
         flex-grow: 1;
     }
     .group-container div:first-child h4 {
         margin: 10px 0;
+    }
+    .group-container div:first-child input {
+        font-size: 16px;
+        padding: 5px 15px;
+    }
+    .group-container div:first-child input[type="text"] {
+        border: 1px solid $greyBorder;
+        margin-right: 20px;
+    }
+    .group-container div:first-child input[type="submit"] {
+        background: $info;
+        color: white;
+    }
+    .group-container div:first-child button {
+        font-size: 18px;
+        padding: 5px 25px;
+        margin: 15px 0;
+        color: white;
+        background-color: $cancel;
     }
     .group-section {
         display: flex;
@@ -934,11 +1003,22 @@ Login page
         border-right: 1px solid $greyBorder;
         padding: 20px;
     }
+    .group-section li {
+        word-break: break-all;
+        margin: 15px 0;
+    }
     .group-section:last-child {
         border: none;
     }
     .group-section:nth-child(2) {
         flex-grow: 3;
+    }
+    .group-section:nth-child(2) button{
+        max-width: 400px;
+        font-size: 16px;
+        color: white;
+        background-color: $info;
+        padding: 7px 0;
     }
     .group-section h3 {
         margin-bottom: 20px;
